--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.14.1",
     "mongoose": "^4.8.4",
     "mongoose-auto-increment": "^5.0.1",
+    "pug": "^2.0.0-beta11",
     "valid-url": "^1.0.9"
   },
   "devDependencies": {},
